feat: add footer on popup and report html

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -37,18 +37,23 @@
     </p>
     <button class="btn btn-light" id="upload">Cargar Participantes 🧑‍🎓</button>
     <button class="btn btn-warning" id="ausentes">Ausentes 🛌</button>
-    
+
     <!-- Notify chat -->
     <h6 class="fw-bold mt-4">Notificación de chat</h6>
-      <p class="heading">
-        <b>1. Activa las notificación</b>
-        Presiona en "Active Chat 💬". Esto escucha los cambios en el dom y te notificara. 
-      </p>
-      <button class="btn btn-info" id="activeNotify">Active Chat 💬</button>
-      <button class="btn btn-danger" id="desactiveNotify">Desactivar Chat 💬</button>
+    <p class="heading">
+      <b>1. Activa las notificación</b>
+      Presiona en "Active Chat 💬". Esto escucha los cambios en el dom y te notificara.
+    </p>
+    <button class="btn btn-info" id="activeNotify">Active Chat 💬</button>
+    <button class="btn btn-danger" id="desactiveNotify">Desactivar Chat 💬</button>
+  </div>
+  
+  <!-- footer -->
+  <div class="container-fluid m-0 p-0">
+    <div class="d-flex flex-column flex-sm-row justify-content-between p-3 border-top bg-light">
+      <p class="small text-muted">© 2022 GomeetPlus. Made by juanmachuca95.</p>
     </div>
   </div>
-
 
   <script src="./popup.js"></script>
   <script src="./read-excel-file.min.js"></script>
