--- a/popup/report.html
+++ b/popup/report.html
@@ -29,6 +29,13 @@
             <ul id="listaAusentes"></ul>
         </div>
     </div>
+    
+    <!-- footer -->
+    <div class="container-fluid m-0 p-0">
+        <div class="d-flex flex-column flex-sm-row justify-content-between p-3 border-top bg-light">
+          <p class="small text-muted">© 2022 GomeetPlus. Made by juanmachuca95.</p>
+        </div>
+      </div>
     <script src="./report.js"></script>
 </body>
 
