fix: improve to readme

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,7 +17,7 @@
   <div class="container-fluid pt-4 px-4">
     <div class="d-flex justify-content-between align-items-center">
       <h3>GomeetPlus</h3>
-      <a class="navbar-brand bg-light p-2 rounded-circle" href="popup.html"">
+      <a class="navbar-brand bg-light p-2 rounded-circle" href="popup.html">
           <img src=" /images/icons/icon128.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
       </a>
     </div>
@@ -28,6 +28,7 @@
     </p>
     <button class="btn btn-success" id="activeNotify">Activar 💬</button>
     <button class="btn btn-danger" id="desactiveNotify">Desactivar</button>
+   
 
     <!-- Asistencia -->
     <h6 class="fw-bold mt-4">Participantes en la llamada</h6>
@@ -48,7 +49,6 @@
   </div>
 
   <script src="./popup.js"></script>
-  <script src="./read-excel-file.min.js"></script>
 </body>
 
 </html>
